--- a/Know-My-Nation-main/Pages/cli.html
+++ b/Know-My-Nation-main/Pages/cli.html
@@ -58,7 +58,7 @@
         <p1>Invalid city name</p1>
       </div>
       <div class="weather">
-        <img src="/img/rain.png" class="weather-icon" />
+        <img src="/img/rain.png" alt="rain" class="weather-icon" />
         <h1 class="temp">22°C</h1>
         <h2 class="city">NEWYORK</h2>
         <div class="details">
